--- a/config/vhosts/default.conf
+++ b/config/vhosts/default.conf
@@ -1,8 +1,23 @@
 <VirtualHost *:80>
-    ServerAdmin webmaster@localhost
     DocumentRoot ${APACHE_DOCUMENT_ROOT}
     ServerName localhost
 	<Directory ${APACHE_DOCUMENT_ROOT}>
+		AllowOverride all
+	</Directory>
+</VirtualHost>
+
+<VirtualHost *:80>
+    DocumentRoot ${APP_FLOREX}
+    ServerName florex.local
+	<Directory ${APP_FLOREX}>
+		AllowOverride all
+	</Directory>
+</VirtualHost>
+
+<VirtualHost *:80>
+    DocumentRoot ${APP_FLOREX_ADMIN}
+    ServerName florex-admin.local
+	<Directory ${APP_FLOREX_ADMIN}>
 		AllowOverride all
 	</Directory>
 </VirtualHost>
