--- a/sample.env
+++ b/sample.env
@@ -8,6 +8,10 @@ COMPOSE_PROJECT_NAME=lamp
 PHPVERSION=php83
 DOCUMENT_ROOT=./www
 APACHE_DOCUMENT_ROOT=/var/www/html
+
+APP_FLOREX=./www/florex
+APP_FLOREX_ADMIN=./www/florex_admin
+
 VHOSTS_DIR=./config/vhosts
 APACHE_LOG_DIR=./logs/apache2
 PHP_INI=./config/php/php.ini
