--- a/config/vhosts/default.conf
+++ b/config/vhosts/default.conf
@@ -1,26 +1,26 @@
-<VirtualHost *:80>
-    DocumentRoot ${APACHE_DOCUMENT_ROOT}
-    ServerName localhost
-	<Directory ${APACHE_DOCUMENT_ROOT}>
-		AllowOverride all
-	</Directory>
-</VirtualHost>
-
-<VirtualHost *:80>
-    DocumentRoot ${APP_FLOREX}
-    ServerName florex.local
-	<Directory ${APP_FLOREX}>
-		AllowOverride all
-	</Directory>
-</VirtualHost>
-
-<VirtualHost *:80>
-    DocumentRoot ${APP_FLOREX_ADMIN}
-    ServerName florex-admin.local
-	<Directory ${APP_FLOREX_ADMIN}>
-		AllowOverride all
-	</Directory>
-</VirtualHost>
+#<VirtualHost *:80>
+#    DocumentRoot ${APACHE_DOCUMENT_ROOT}
+#    ServerName localhost
+#	<Directory ${APACHE_DOCUMENT_ROOT}>
+#		AllowOverride all
+#	</Directory>
+#</VirtualHost>
+#
+#<VirtualHost *:80>
+#    DocumentRoot ${APP_FLOREX}
+#    ServerName florex.local
+#	<Directory ${APP_FLOREX}>
+#		AllowOverride all
+#	</Directory>
+#</VirtualHost>
+#
+#<VirtualHost *:80>
+#    DocumentRoot ${APP_FLOREX_ADMIN}
+#    ServerName florex-admin.local
+#	<Directory ${APP_FLOREX_ADMIN}>
+#		AllowOverride all
+#	</Directory>
+#</VirtualHost>
 
 # Allows HTTPS on localhost. You will need to use mkcert on your local machine
 # to create the `cert.pem` and `cert-key.pem` files, and then place them in the
@@ -29,15 +29,37 @@
 # file to map that domain name to 127.0.0.1 and then configure your vhosts below
 # accordingly:
 #
-# <VirtualHost *:443>
-#     ServerAdmin webmaster@localhost
-#     DocumentRoot ${APACHE_DOCUMENT_ROOT}
-#     ServerName localhost
-# 	<Directory ${APACHE_DOCUMENT_ROOT}>
-# 		AllowOverride all
-# 	</Directory>
+ <VirtualHost *:443>
+     ServerAdmin webmaster@localhost
+     DocumentRoot ${APACHE_DOCUMENT_ROOT}
+     ServerName localhost
+ 	<Directory ${APACHE_DOCUMENT_ROOT}>
+ 		AllowOverride all
+ 	</Directory>
 
-#     SSLEngine on
-#     SSLCertificateFile /etc/apache2/ssl/cert.pem
-#     SSLCertificateKeyFile /etc/apache2/ssl/cert-key.pem
-# </VirtualHost>
+     SSLEngine on
+     SSLCertificateFile /etc/apache2/ssl/cert.pem
+     SSLCertificateKeyFile /etc/apache2/ssl/cert-key.pem
+ </VirtualHost>
+ <VirtualHost *:443>
+    DocumentRoot ${APP_FLOREX}
+    ServerName florex.local
+	<Directory ${APP_FLOREX}>
+		AllowOverride all
+	</Directory>
+
+     SSLEngine on
+     SSLCertificateFile /etc/apache2/ssl/cert.pem
+     SSLCertificateKeyFile /etc/apache2/ssl/cert-key.pem
+ </VirtualHost>
+ <VirtualHost *:443>
+      DocumentRoot ${APP_FLOREX_ADMIN}
+      ServerName florex-admin.local
+  	<Directory ${APP_FLOREX_ADMIN}>
+  		AllowOverride all
+  	</Directory>
+
+     SSLEngine on
+     SSLCertificateFile /etc/apache2/ssl/cert.pem
+     SSLCertificateKeyFile /etc/apache2/ssl/cert-key.pem
+ </VirtualHost>
